from enum import Enum


class Note(Enum):
    ONE = 1
    FIVE = 5
    TEN = 10
    TWENTY = 20
